--- a/healthCare/templates/index.html
+++ b/healthCare/templates/index.html
@@ -58,6 +58,7 @@
       <a href="/soap">SOAP Records</a>
       <a href="/visit_info">Visit Management</a>
       <a href="/visit_summary">After Visit Summary</a>
+      <a href="/physicians">Physician Profile</a>
     </div>
   </div>
 </body>
